# mesher

./: .gitignore  README.md  boundarylayer.py  cell.py  config.py  edgeswap.py  func.py  hausdorff.py  main.py  meshinfo.py  models.py  mygmsh.py  myio.py  node.py  radius.py  requirements.txt  utility.py  view.py
assets/: convert_centerlinefile.py  view_msh.py
assets/maketube/: .gitignore  CMakeLists.txt  CMakeSettings.json  TubesFromSplines.cxx  solve_matrix.py
data/patient2/130_0_1500/: centerline0.csv  centerline130.csv
data/spiral_stenosis/input/: calc_length.py  original_spiral.csv  target_spiral_const_radius.csv  target_straight_const_radius.csv
data/straight_stenosis/input_straight_stenosis/: original.csv  target_rad.csv  targetcenterline.txt  targetradius.txt
input/: parameter.txt  radius.txt
input/sample2-patient3-130-90-CBS/: WALL130.stl  centerline130.csv  centerline90.csv
